--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,11 @@ header nav a {
   margin-bottom: 10px;
 }
 
+.mini-title {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
 .sub-text {
   font-size: 18px;
   color: #E5E7EB;
@@ -46,12 +51,13 @@ header nav a {
 
 .hero-image {
   background-color: #7f8c8d;
-  width: 600px;
+  width: 300px;
   height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0 20px;
+  border: 2px solid white;
 }
 
 .info {
